<resources>
    <string name="app_name">Chat App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_to_chat_app">Welcome to Chat App</string>
    <string name="app_description">This app offers encrypted communication to ensure that your messages remain secure and private.</string>

    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_to_log_out">Are you sure you want to logout?</string>
    <string name="logout">Log out</string>
    <string name="me">Me</string>
    <string name="failed_to_send">Failed to send.</string>
    <string name="sent">Sent</string>
    <string name="sending">Sending</string>
    <string name="start_writing_messages_to">Start writing messages to</string>
    <string name="write_a_message">Write a message</string>
    <string name="login_or_register">If you already have an account login, otherwise create a new account.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="login_to_continue_chatting">Login to continue chatting</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="fields_are_required">Fields are required!</string>
    <string name="register_to_get_started">Register to get started!</string>
    <string name="no_messages_yet">No messages yet. Start chatting now.</string>
    <string name="new_message">New message</string>
    <string name="new_messages">New messages</string>
    <string name="you_don_t_have_chats_yet_start_chatting_now">You don\'t have chats yet. Start chatting now.</string>
    <string name="no_results_found">No results found</string>

</resources>