<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chat_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/welcome_to_chat_app"
            android:textColor="@color/blue"
            android:textSize="@dimen/_22ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:text="@string/app_description"
            android:textColor="@color/neutral_grey"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding20"
            android:fontFamily="@font/regular"
            android:text="@string/login_or_register"
            android:textColor="@color/neutral_grey"
            android:textSize="@dimen/_12ssp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding30"
            android:backgroundTint="@color/blue"
            android:paddingVertical="@dimen/padding16"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/txtSize14"
            app:cornerRadius="@dimen/padding10"
            app:layout_constraintTop_toBottomOf="@+id/topPart" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding12"
            android:backgroundTint="@color/light_grey"
            android:paddingVertical="@dimen/padding16"
            android:shadowColor="@color/white"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/txtSize14"
            app:cornerRadius="@dimen/padding10"
            app:layout_constraintTop_toBottomOf="@+id/topPart" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
