<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="@dimen/padding10">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/_185sdp"
        android:padding="@dimen/padding8"
        android:text="Productivity"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize14"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/resend"
            android:layout_width="@dimen/image20"
            android:layout_height="@dimen/image20"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/padding6"
            android:src="@drawable/ic_settings"
            app:tint="@color/grey"
            android:visibility="gone"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:layout_margin="@dimen/_3sdp"
            app:cardCornerRadius="@dimen/padding16">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/padding3"
                android:paddingHorizontal="@dimen/padding10">

                <TextView
                    android:id="@+id/thisUserFullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txtSize18"
                    android:layout_gravity="right"
                    android:fontFamily="@font/bold"/>

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/_185sdp"
                    android:text="Productivity"
                    android:layout_gravity="left"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txtSize18"
                    />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/_185sdp"
                    android:text="12:00"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txtSize10"
                    android:layout_gravity="right"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:id="@+id/sendingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/padding3"
        android:maxWidth="@dimen/_185sdp"
        android:text="@string/sending"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize8"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/sentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/padding3"
        android:maxWidth="@dimen/_185sdp"
        android:text="@string/sent"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize8"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/failedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="@dimen/padding12"
        android:maxWidth="@dimen/_185sdp"
        android:text="@string/failed_to_send"
        android:textColor="@color/red"
        android:textSize="@dimen/txtSize8"
        android:visibility="gone"/>

</LinearLayout>
